--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-ionicons": "^4.6.5",
     "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "^4.7.4",
