--- a/package.json
+++ b/package.json
@@ -10,22 +10,29 @@
   },
   "dependencies": {
     "@expo-google-fonts/open-sans": "^0.2.3",
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "^1.19.5",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-ionicons": "^4.6.5",
     "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^5.11.1",
+    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-star-rating-widget": "^1.7.3",
+    "react-native-web": "~0.19.6",
     "yup": "^1.3.2"
   },
   "devDependencies": {
